@@ -36,6 +36,7 @@ import haven.MapFile.SMarker;
 import haven.MapFileWidget.*;
 import haven.sloth.DefSettings;
 import haven.sloth.gob.Type;
+import haven.sloth.gui.DowseWnd;
 import haven.sloth.io.MarkerData;
 
 import static haven.LocalMiniMap.plx;
@@ -177,6 +178,27 @@ public class MapWnd extends Window {
                 return true;
             }
             return (super.mousedown(c, button));
+        }
+
+        private void drawTracking(GOut g, final Location ploc) {
+            final Coord pc = new Coord2d(mv.getcc()).floor(tilesz);
+            final double dist = 90000.0D;
+            synchronized (ui.gui.dowsewnds) {
+                for(final DowseWnd wnd : ui.gui.dowsewnds) {
+                    final Coord mc = new Coord2d(wnd.startc).floor(tilesz);
+                    final Coord lc = mc.add((int)(Math.cos(Math.toRadians(wnd.a1())) * dist), (int)(Math.sin(Math.toRadians(wnd.a1())) * dist));
+                    final Coord rc = mc.add((int)(Math.cos(Math.toRadians(wnd.a2())) * dist), (int)(Math.sin(Math.toRadians(wnd.a2())) * dist));
+                    final Coord gc = xlate(new Location(ploc.seg, ploc.tc.add(mc.sub(pc))));
+                    final Coord mlc = xlate(new Location(ploc.seg, ploc.tc.add(lc.sub(pc))));
+                    final Coord mrc = xlate(new Location(ploc.seg, ploc.tc.add(rc.sub(pc))));
+                    if(gc != null && mlc != null && mrc != null) {
+                        g.chcolor(Color.MAGENTA);
+                        g.dottedline(gc, mlc, 1);
+                        g.dottedline(gc, mrc, 1);
+                        g.chcolor();
+                    }
+                }
+            }
         }
 
         private Set<Long> drawparty(GOut g, final Location ploc) {
@@ -397,6 +419,8 @@ public class MapWnd extends Window {
                             drawicons(g, loc, ignore);
                             //Draw Movement queue if any exit
                             drawmovement(g.reclip(view.c, view.sz), loc);
+                            //Draw any tracking details
+                            drawTracking(g.reclip(view.c, view.sz), loc);
                         }));
             } catch (Loading l) {
                 //ignore
